--- a/13_Even Handling/Praktikum/src/component/style.css
+++ b/13_Even Handling/Praktikum/src/component/style.css
@@ -1,19 +1,45 @@
-.IsiPekerjaan>td{
-    background-color: bisque;
-    padding: 20px 20px;
+.ceckbox{
+    border-left: 5px solid;
 }
 
 table{
-    margin-top: 50px;
+    margin-top: 20px;
     margin-left: auto; 
     margin-right: auto;
+    border: 5px inset;
+    padding: 80px;
+    border-radius: 30px;
+    background-color: rgb(216, 215, 215);
 }
+.IsiPekerjaan>td{
+    padding: 10px;
+}
+
 
 .InputText{
     margin-top: 50px;
     text-align: center;
 }
 
+
+.home{
+    text-align: center;
+}
+
 h1{
-    background-color: ;
+    font-size: 120px;
+
+}
+
+.InputText>input{
+    border-radius: 20px;
+    width: 30%;
+    padding: 10px 10px;
+}
+
+.InputText>button{
+    border-radius: 20px;
+    padding: 10px 10px;
+    border-radius: 30px;
+    background-color: grey;
 }
